# custom_ecs

./: Cargo.toml  README.md  clippy.toml
benches/: my_benchmark.rs
ecs-proc-macros/: Cargo.toml
ecs-proc-macros/src/: lib.rs
ecs-proc-macros/tests/: force_build.rs
src/: component.rs  entity.rs  events.rs  lib.rs  macros.rs  table.rs  world.rs
src/tests/: create_component.rs  mod.rs  table_tests.rs
src/utils/: entity_range.rs  mod.rs
tests/: ecs_tests.rs
