workspace = { members = ["ecs-proc-macros"] }
[package]
name = "custom_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecs-proc-macros = { path = "ecs-proc-macros" }
hashbrown = { version = "0.14.3", features = ["nightly"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false