[package]
name = "ecs-proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly = ["rand/nightly"]
serde = ["rand/serde"]

[dependencies]
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.48", features = ["full"] }

[lib]
proc-macro = true
